# USC-Communications-Systems

./: .gitignore  BMS_Devboard  README.md  gitignore  main.c  v3-relay-board.ioc
Custom_BMS/: .cproject  .mxproject  .project  Custom_BMS Debug.launch  Custom_BMS.ioc
Custom_BMS/Core/Inc/: main.h
Custom_BMS/Core/Src/: main.c  stm32f4xx_hal_msp.c
Custom_BMS/Debug/: Custom_BMS.elf  Custom_BMS.list  Custom_BMS.map  makefile  objects.list
Lora-Code/: AT Command List.txt  readme.txt
Lora-Code/LoRa_board/: .cproject  .mxproject  .project  LoRa_board Debug.launch  LoRa_board.ioc
Lora-Code/LoRa_board/Debug/: LoRa_board.elf  LoRa_board.list  LoRa_board.map  makefile  objects.list
Lora-Code/lora_stm_receive/: .cproject  .project  lora_stm_receive Debug.launch  lora_stm_receive Documentation.rtf  lora_stm_receive.ioc
Lora-Code/lora_stm_receive/Debug/: lora_stm_receive.elf  lora_stm_receive.list  lora_stm_receive.map  (+1 more)
Lora-Code/misc/: description.txt  main.c
Precharge/: .cproject  .project  CMakeLists.txt  Precharge-th Debug.launch  Precharge-th.ioc  progress.txt  readme.txt  tests.txt
Precharge/Core/Inc/: main.h  stm32c0xx_it.h
Precharge/Core/Src/: main.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c
Precharge/Debug/: Precharge-th.elf  Precharge-th.list  Precharge-th.map  makefile
Precharge/Debug/Core/Src/: main.cyclo  main.su  stm32c0xx_hal_msp.cyclo  stm32c0xx_hal_msp.su  stm32c0xx_it.cyclo  stm32c0xx_it.su
Precharge/linker/: STM32C011F6P6_FLASH.ld
Precharge/src/: alt.cpp  main.cpp
Precharge_STM32/: .cproject  .mxproject  .project  Precharge Documentation.docx  Precharge_STM32.ioc
Relay-Board/: STM32C011F4PX_FLASH.ld  readme.txt  relay-board Debug.launch  relay-board.ioc
Relay-Board-V2/relay-board/: .cproject  .project  relay-board.ioc
Relay-Board/Debug/: relay-board.list  relay-board.map
Temp-Expansion-Board/: progress.txt
Temp-Expansion-Board/kenji-testjan16/: .cproject  .mxproject  .project  kenji-testjan16 Debug.launch  kenji-testjan16.ioc
blinky/: firmware.elf  firmware.elf.map  main.c
onboarding/: blinky-onboard.ioc
onboarding/CAN-ADC-project/: .cproject  .mxproject  .project  blinky-onboard Debug.launch  blinky-onboard.ioc
onboarding/blinky-baremetal/: Makefile
relay_board/: .cproject  .project  STM32C011F4PX_FLASH.ld  relay_board.ioc
relay_board/Debug/: makefile  relay_board.map
temppcb/: .cproject  .project  temppcb.ioc
(+120 files in other folders)
